# universeK

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  cursor.c  debug.c  driver.c  filesystem.c  font.c  idt.c  interrupt.asm  irq.c  kernel.c  keyboard.c  link.ld  linker.ld  memory.c  mouse.c  pic.c  run.sh  string.c  vga.c  window.c
.cargo/: config.toml
boot/stage1/: boot.asm
common/src/: lib.rs
docs/: GETTING_STARTED.md  GUI_SYSTEM.md  KNOWN_ISSUES.md  UTILITY_FEATURES.md
include/: cursor.h  debug.h  driver.h  filesystem.h  font.h  idt.h  interrupt.h  kernel.h  memory.h  mouse.h  pic.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  terminal.h  vga.h  window.h
include/debug/: debug.h
include/interrupts/: interrupt.h  irq.h  pic.h
include/io/: io.h
include/kernel/: types.h
include/memory/: malloc.h
kernel/: Cargo.toml
kernel/src/: allocator.rs  errors.rs  gdt.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
kernel/src/config/: mod.rs
kernel/src/device/: ata.rs  mod.rs
kernel/src/drivers/: mod.rs  pci.rs  pit.rs  ps2_keyboard.rs  ps2_mouse.rs  rtc.rs  vga_enhanced.rs
kernel/src/fs/: block_adapter.rs  block_device.rs  fat.rs  fd.rs  mod.rs  ramdisk.rs  simple_fs.rs  tempfs.rs  vfs.rs
kernel/src/gui/: app.rs  desktop.rs  events.rs  mod.rs  window.rs
kernel/src/interrupts/: apic.rs  mod.rs  pic.rs
kernel/src/logger/: mod.rs
kernel/src/shell/: mod.rs
kernel/src/task/: context_switch.rs  mod.rs  scheduler.rs  task.rs  task_structs.rs
kernel/src/user/: mod.rs  welcome.rs
src/: terminal.c  window.c
(+28 files in other folders)
