[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] } # Request memory map feature
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

# For interrupts and CPU interaction
x86_64 = "0.14.2"

# For PIC (Interrupt Controller)
pic8259 = "0.10.1"

# For Keyboard Input
pc-keyboard = "0.5.0"

# For VGA text buffer
uart_16550 = "0.2.0"

# For Heap allocation
linked_list_allocator = "0.9.0"

# Dependency for common types (will be created next)
# common = { path = "../common" }

[package.metadata.bootimage]
# Customize bootimage settings if needed, e.g., run args
run-args = ["-serial", "stdio"] # Redirect COM1 serial output to host stdio 